--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "@iconify/icons-mdi": "^1.2.44",
+    "@iconify/react": "^4.1.0",
     "tailwindcss": "^3.2.7"
   }
 }
